Fix last child stretching to container width

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 :root { 
   --bg-color: #fdfcdc;
-  --card-bg-color: #00afb9;
-  --card-border-color: #0081a7;
-  --primary-color: #697565;
+  --primary-color: #00afb9;
+  --secondary-color: #0081a7;
   --accent-color: #f07167;
   --text-color: white;
   --red-color:	#de5a52;
   --green-color:	#88d4ab;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 html {
@@ -39,7 +42,7 @@ h1 {
 .add-book-btn {
   padding: 1rem 2rem;
   margin-bottom: 1rem;
-  background-color: var(--accent-color);
+  background-color: var(--primary-color);
   color: white;
   font-size: 16px;
   font-weight: bold;
@@ -53,15 +56,11 @@ h1 {
   display: flex;
   flex-flow: row wrap;
   gap: 16px;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  
 }
 
 .book-card {
   flex: 1 1 auto;
-  max-width: none;
-  background-color: var(--card-bg-color);
+  background-color: var(--secondary-color);
   padding: 1rem;
   border-radius: 8px;
   display: grid;
@@ -73,6 +72,11 @@ h1 {
   align-items: center;
   column-gap: 1rem;
   transition: ease 0.2s;
+}
+
+.book-card:last-child,
+.book-card:nth-last-child(2) {
+  max-width: fit-content;
 }
 
 .book-card:hover,
@@ -121,4 +125,76 @@ h1 {
 
 .icon-remove {
   grid-area: icon-remove;
+}
+
+dialog {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 16px;
+  width: 25vw;
+  min-width: 300px;
+  box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
+}
+
+dialog::backdrop {
+  background-color: rgb(0, 0, 0, 0.5);
+}
+
+fieldset {
+  border: none;
+}
+
+legend {
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
+}
+  
+fieldset p:not(:last-child) {
+  display: flex;
+  flex-direction: column;
+  margin-block: 12px;
+  gap: 4px;
+}
+
+fieldset p:last-child {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-block: 12px;
+}
+
+form {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+form label {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+form input {
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 8px;
+  border: 2px solid var(--primary-color);
+  border-radius: 4px;
+  outline: none;
+  transition: box-shadow ease 0.2s;
+}
+
+form input:focus {
+  box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.1);
+  border: 2px solid var(--secondary-color);
+}
+
+form button {
+  font-family: inherit;
+  align-self: flex-end;
+  padding: 8px 24px;
+  border: none;
+  border-radius: 6px;
 }
